--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,69 @@
 {% extends 'layout.html' %}
 {% block body %}
-  <div class="jumbotron text-center">
-    <h1>Welcome to Poética Sonora</h1>
-    <p class="lead">An archive for Spanish audio.</p>
-  </div>
+    <div class="loading" data-loading="page"></div>
+        <div class="loading_animation pulsing <%= extra_class %> "><div>
+
+
+		<div id="main-page" class="container">
+			<main class="content_width" data-container="content">
+				<div data-container-padding>
+					<div class="content_padded">
+				    	<div class="bodycopy" data-sortable="Content" data-view="ProjectDetail" data-set="Project" style="display:block;">
+				    		<a href="#" class="show_index" rel="show_index" style="display: none">✕</a>
+				    		<div id="content" class="padded" data-id="145850">
+                                <div class="project_title" style="display: none">PS Inicio</div>
+					    		<div class="content clearfix" data-elementresizer data-resize-parent>
+					    			<projectcontent id="project-title">
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <div style="text-align: center;">
+                                            <h1><b>POÉTICA<i>S</i>ONORA</b></h1>
+                                            <br>
+                                            <h2><b>Voz, legibilidad, escucha</b><br></h2><br><br>
+                                            <br>
+                                            <br>
+                                            <repositorio digital="" de="" audio<="" u=""><b><u><a href="/search" rel="history">Repositorio Digital de Audio</a></u></b><br>
+                                            Digital Audio Repository<br>
+                                            (2016-2017)<br>
+                                            <br>
+                                            <b><a href="PoeticaSonora_2017_Inicio" rel="history"><u>Programa de activaciones</u></a></b><br>
+                                            Activation Program<br>
+                                            (2017)<br>
+                                            <br><b><a href="PoeticaSonora_2016_Inicio" rel="history"><u>Programa de activaciones</u></a></b></repositorio><br>
+                                            Activation Program<a href="Inicio" rel="history"><br>
+                                            (2016)
+
+         </a><br><br><br><small><br><br>
+<a href="Proyecto" rel="history">Sobre el proyecto</a> | <a href="Participantes-PoeticaSonora" rel="history">Participantes</a> | <a href="Instancias-que-colaboran-con-nosotros" rel="history">Instancias que colaboran con nosotros</a> | <a href="Noticias" rel="history">Prensa</a>&nbsp;| <br>
+<a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Documentación visual</a> | <a href="Equipo" rel="history">Créditos 2016</a> | <a href="Equipo-RDA" rel="history">Créditos 2017</a> | <a href="Contacto" rel="history">Contacto</a>&nbsp;<br>
+<a href="Project" rel="history">About the project</a> | <a href="Participants" rel="history">Participants</a> | <a href="Collaborating-Institutions" rel="history">Collaborating Institutions</a> | <a href="Press" rel="history">Press</a>
+|<br>
+<a href="http://laboratorioextendido.dropmark.com/150515" target="_blank">Visual Documentation</a> |
+                                            <a href="Team" rel="history">Credits 2016</a> |
+                                            <a href="Equipo-RDA" rel="history">Credits 2017</a> |
+                                            <a href="Contact" rel="history">Contact</a><br><br>
+<b><a href="http://www.twitter.com/_lleom_" class="icon-link" target="_blank"></a>
+    <a href="https://www.facebook.com/laboratorioextendido" class="icon-link" target="_blank"></a></b><br>#PoéticaSonoraMX
+</small><br>
+
+<br><br><a href="https://lleom.net/" class="image-link" target="_blank"><img src="//payload.persona.co/1/0/28105/145850/lleom_logo_negro_403.jpeg" width="403" height="156" width_o="403" height_o="156" src_o="//payload.persona.co/1/0/28105/145850/lleom_logo_negro_403.jpeg" data-mid="310542" border="0"data-scale="50"/></a><br>
+<br></projectcontent>
+					    		</div>
+
+
+                                <directlink link="http://poeticasonora.mx/PS-Inicio" id="dl_145850"></directlink>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+        </div>
+
 {% endblock %}
