--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -7,14 +7,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Poética Sonora</a>
+          <a class="navbar-brand">Poética Sonora</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/articles">Articles</a></li>
-            <li><a href="/names">Names</a><li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/register">Register</a></li>
