--- a/templates/search.html
+++ b/templates/search.html
@@ -49,10 +49,10 @@
                                                                   <div class="form-group">
                                                                     <label for="filter">Filter by</label>
                                                                     <select class="form-control">
-                                                                        <option value="0" selected>All Snippets</option>
-                                                                        <option value="1">Featured</option>
-                                                                        <option value="2">Most popular</option>
-                                                                        <option value="3">Top rated</option>
+                                                                        <option value="0" selected>All Categories</option>
+                                                                        <option value="1">Autor</option>
+                                                                        <option value="2">Composicion</option>
+                                                                        <option value="3"></option>
                                                                         <option value="4">Most commented</option>
                                                                     </select>
                                                                   </div>
@@ -69,14 +69,17 @@
                                                             </div>
                                                         </div>
                                                         <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+
                                                     </div>
                                                 </div>
+
                                             </div>
                                           </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            {% include 'includes/_footer.html' %}
                         </div>
                     </div>
                 </div>
