--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,26 +23,32 @@
         <meta property="og:image" content="http://payload.persona.co/1/0/28105/headerimg/social_1465783242.png" />
         <meta property="og:type" content="website"/>
 
+        <!-- Eliminate Caching for development -->
+        <meta http-equiv="cache-control" content="max-age=0" />
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+        <meta http-equiv="pragma" content="no-cache" />
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="{{ url_for('static', filename='css/stylesheet.css') }}" id="member_stylesheet" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/global.css') }}" id="" rel="stylesheet" type="text/css" />
+        <link href="{{ url_for('static', filename='css/searchbar.css') }}" id="" rel="stylesheet" type="text/css" />
     </head>
 
 
 
     <body data-bodyview="index" class="default">
       {% include 'includes/_navbar.html' %}
-      <div class="container">
+      <div class="container center-block" style="width: 80%;">
         {% block body %}{% endblock %}
-
-
 
 
         <directlink link="http://poeticasonora.mx/PS-Inicio" id="dl_145850"></directlink>
         <div data-subpage-overlay class="subpage_overlay"></div>
         <div data-content-ruler class="content_width"></div>
-        <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+        <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       </div>
     </body>
 </html>
