--- a/templates/includes/_messages.html
+++ b/templates/includes/_messages.html
@@ -8,13 +8,13 @@
 
 {% if error %}
 
-    <div class=""alert alert-danger>{{ error }}</div>
+    <div class="alert alert-danger">{{ error }}</div>
 
 {% endif %}
 
 {% if msg %}
 
-    <div class=""alert alert-success>{{ msg }}</div>
+    <div class="alert alert-success">{{ msg }}</div>
 
 {% endif %}
 
