--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,9 @@
   {% include 'includes/_messages.html' %}
   <form action="" method="POST">
     <div class="form-group">
-      <label>Username</label>
-      <input type="text" name="username" class="form-control"
-                                         value={{request.form.username}}>
+      <label>Email</label>
+      <input type="text" name="email" class="form-control"
+                                         value={{request.form.email}}>
     </div>
     <div class="form-group">
       <label>Password</label>
