Started Autor page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,6 @@
 {% block body %}
     <div class="loading" data-loading="page"></div>
         <div class="loading_animation pulsing <%= extra_class %> "><div>
-
-
 		<div id="main-page" class="container">
 			<main class="content_width" data-container="content">
 				<div data-container-padding>
@@ -27,7 +25,7 @@
                                             <h2><b>Voz, legibilidad, escucha</b><br></h2><br><br>
                                             <br>
                                             <br>
-                                            <div><b><u><a href="/search" rel="history">Repositorio Digital de Audio</a></u></b><br>
+                                            <div><b><u><a href="/searchhome" rel="history">Repositorio Digital de Audio</a></u></b><br>
                                                 Digital Audio Repository
                                                     <br>
                                                 (2016-2017)
