--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-predefined-style="true" data-css-presets="true">
+<html lang="es" data-predefined-style="true" data-css-presets="true">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>PoéticaSonora | México 2016</title>
-
         <meta name="ROBOTS" content="INDEX,FOLLOW">
         <meta name="description" content="Voz, legibilidad, escucha">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
