--- a/static/css/searchbar.css
+++ b/static/css/searchbar.css
@@ -1,5 +1,13 @@
 a { color: inherit; }
 
+h3.indented {
+    padding-left: 1.8em;
+}
+
+h4.indented {
+    padding-left: 1.8em;
+}
+
 .dropdown.dropdown-lg .dropdown-menu {
     margin-top: -1px;
     padding: 6px 20px;
