--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -1,6 +1,6 @@
-<form class="form-horizontal" role="form" action="/search" method="post">
+<form name="search-form" class="form-horizontal" role="form" action="/search" method="get">
     <div class="input-group" id="adv-search">
-        <input name="search-main" type="text" class="form-control" placeholder="Search"/>
+        <input onclick="noPropagate(event);" name="search-main" type="text" class="form-control" placeholder="Search"/>
         <div class="input-group-btn">
             <div class="btn-group" role="group">
                 <div class="dropdown dropdown-lg">
@@ -15,21 +15,43 @@
                                 <option value="2">Composicion</option>
                                 <option value="3">Tema</option>
                                 <option value="4">Genero</option>
+                                <option value="5">Instrumento</option>
+                                <option value="6">Colectivo</option>
+                                <option value="7">Idioma</option>
+                                <option value="8">Lugar</option>
+                                <option value="9">Intepretado por</option>
                             </select>
                           </div>
                           <div class="form-group">
-                            <label for="contain">Author</label>
-                            <input class="form-control" type="text" />
+                              <div class="container">
+                                  <div class="row text-center">
+                                      <div class="col-xs-6">
+                                          <label for="contain">Ano Comenzio</label>
+                                      </div>
+                                      <div class="col-xs-6">
+                                          <label for="contain">Ano Finale</label>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-xs-6">
+                                        <input name="ano-start" class="form-control" type="text" placeholder="Ahora" />
+                                      </div>
+                                      <div class="col-xs-6">
+                                        <input name="ano-end" class="form-control" type="text"
+                                               placeholder="Principio de los tiempos" />
+                                      </div>
+                                  </div>
+                              </div>
                           </div>
                           <div class="form-group">
                             <label for="contain">Contains the words</label>
-                            <input class="form-control" type="text" />
+                            <input name="search-snd" class="form-control" type="text" />
                           </div>
-                          <button name="search" type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                          <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
-                <button name="search" type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
             </div>
         </div>
     </div>
