Remove ignored files

--- a/templates/autor.html
+++ b/templates/autor.html
@@ -1,7 +1,6 @@
-{% extends 'layout.html' %}
+{% extends 'searchlayout.html' %}
 
 {% block body %}
-    {% include 'includes/_header.html' %}
     <div class="center-block" style="width: 80%;">
         <hr>
         <h4>Nom</h4>
@@ -79,5 +78,4 @@
            </table>
         {% endif %}
     </div>
-    {% include 'includes/_footer.html' %}
 {% endblock %}
