--- a/templates/includes/_searchbar.html
+++ b/templates/includes/_searchbar.html
@@ -12,13 +12,13 @@
                             <select name="filter-by" onclick="noPropagate(event);" id="no-click" class="form-control">
                                 <option value="0" selected>All Categories</option>
                                 <option value="1">Autor</option>
-                                <option value="2">Composicion</option>
-                                <option value="3">Tema</option>
-                                <option value="4">Genero</option>
-                                <option value="5">Instrumento</option>
-                                <option value="6">Colectivo</option>
-                                <option value="7">Idioma</option>
-                                <option value="8">Lugar</option>
+                                <option value="2">Colectivo</option>
+                                <option value="3">Composicion</option>
+                                <option value="4">Serie</option>
+                                <option value="5">Tema</option>
+                                <option value="6">Genero</option>
+                                <option value="7">Instrumento</option>
+                                <option value="8">Idioma</option>
                                 <option value="9">Intepretado por</option>
                             </select>
                           </div>
@@ -26,10 +26,10 @@
                               <div class="container">
                                   <div class="row text-center">
                                       <div class="col-xs-6">
-                                          <label for="contain">Ano Comenzio</label>
+                                          <label for="ano-start">Ano Comenzio</label>
                                       </div>
                                       <div class="col-xs-6">
-                                          <label for="contain">Ano Finale</label>
+                                          <label for="an-end">Ano Finale</label>
                                       </div>
                                   </div>
                                   <div class="row">
@@ -44,8 +44,8 @@
                               </div>
                           </div>
                           <div class="form-group">
-                            <label for="contain">Contains the words</label>
-                            <input name="search-snd" class="form-control" type="text" />
+                            <label for="contains">Contains the words</label>
+                            <input name="contains" class="form-control" type="text" />
                           </div>
                           <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                         </div>
