--- a/templates/searchlayout.html
+++ b/templates/searchlayout.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html' %}
-{% block body %}
-    {% include 'includes/_header.html' %}
-    {% include 'includes/_footer.html' %}
-{% endblock %}
+    {% block body %}
+        {% include 'includes/_header.html' %}
+        {% block resultbody %}
+
+        {% endblock %}
+        {% include 'includes/_footer.html' %}
+    {% endblock %}
